# threatflux-binary-analysis

./: .gitignore  API.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile.fmt  Makefile  README.md  SECURITY.md  TESTING.md  default_12539524847725269248_0_27577.profraw  default_12747244814235333655_0_27579.profraw  default_2864845945093389947_0_27575.profraw  default_3534237857886140900_0_27539.profraw  default_3534237857886140900_0_27548.profraw  default_3534237857886140900_0_27549.profraw  default_3534237857886140900_0_27550.profraw  default_3534237857886140900_0_27551.profraw  default_3534237857886140900_0_27552.profraw  default_3534237857886140900_0_27553.profraw  default_3534237857886140900_0_27554.profraw  default_3534237857886140900_0_27555.profraw  default_3658463740634418846_0_27539.profraw  default_3658463740634418846_0_27548.profraw  default_3658463740634418846_0_27549.profraw  default_3658463740634418846_0_27550.profraw  default_3658463740634418846_0_27551.profraw  default_3658463740634418846_0_27552.profraw  default_3658463740634418846_0_27553.profraw  default_3658463740634418846_0_27554.profraw  default_3658463740634418846_0_27555.profraw  default_5661921642002184473_0_27578.profraw  default_6388531303064003321_0_27576.profraw  default_7402399155334737034_0_27572.profraw  default_753648649124935160_0_27574.profraw  default_8608768111653731701_0_27573.profraw  deny.toml  lcov.info  (+3 more)
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
coverage-report/html/: index.html
examples/: basic_analysis.rs  control_flow.rs  disassembly.rs  security_analysis.rs
examples/util/: mod.rs
scripts/: install-hooks.sh
src/: error.rs  lib.rs  types.rs
src/analysis/: call_graph.rs  control_flow.rs  entropy.rs  mod.rs  security.rs  symbols.rs  visualization.rs
src/disasm/: capstone_engine.rs  iced_engine.rs  mod.rs
src/formats/: elf.rs  java.rs  macho.rs  mod.rs  pe.rs  raw.rs  wasm.rs
src/utils/: compression.rs  extractor.rs  mmap.rs  mod.rs  patterns.rs  serde_utils.rs
test_samples/: README.md  analysis_script.py  create_binary.py  mixed_content.txt  test_program  test_program.c  test_script.sh
tests/: README.md  analyzer_test.rs  control_flow_test.rs  elf_test.rs  enhanced_analysis_integration_test.rs  format_detection_test.rs  iced_disasm_test.rs  integration_performance_test.rs  integration_test.rs  macho_test.rs  mod.rs  types_test.rs  unit_compiler_detection_test.rs  unit_debug_info_test.rs  unit_elf_test.rs  unit_enhanced_binary_info_test.rs  unit_java_test.rs  unit_macho_test.rs  unit_pe_test.rs  unit_property_based_test.proptest-regressions  unit_property_based_test.rs  unit_property_based_test.rs.tmp.3662168.1755374483584  util.rs  wasm_test.rs
tests/common/: fixtures.rs  helpers.rs  mod.rs
